--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	<title></title>
 </head>
 <body>
-<h1>Mozilla is cool</h1>
+	<h1>Mozilla is cool</h1>
+	<p>At Mozilla, we’re a global community of</p>
+
+	<ul>
+		<li>technologists</li>
+		<li>thinkers</li>
+		<li>builders</li>
+	</ul>
+
+	
+
 </body>
 </html>
