--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-</head>
+
 <body>
     <h1>Mozilla is cool</h1>
+
+    <img src="firefox-icon/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+
     <p>At Mozilla, we’re a global community of</p>
 
     <ul>
