add show and hide button for fox

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <h1>Mozilla is cool</h1>
 
-    <img src="firefox-icon/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img id="image" src="firefox-icon/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+
+    <button type="mybutton" onclick="show()" id="show"> Show fox</button>
+
+    <button type="mybutton" onclick="hide()" id="hide"> Hide fox</button>
 
     <p>At Mozilla, we’re a global community of</p>
 
